--- a/app/views/courses/computer.html.erb
+++ b/app/views/courses/computer.html.erb
@@ -21,7 +21,7 @@
 
       <!-- Add a picture -->
       <div class="image-container">
-        <%= image_tag 'computer_comp.png', alt: 'TV Homescreen', class: 'homescreen-image', style: 'max-width: 90%; height: auto;' %>
+        <%= image_tag 'computer_comp.png'; %>
       </div>
 
 
@@ -58,7 +58,8 @@
   }
 
   .image-container {
-    margin-top: 20px;
+    margin-top: 40px;
+    width: 100%;
   }
 
   body {
