--- a/app/views/courses/computer_lessons/computer_passwords.html.erb
+++ b/app/views/courses/computer_lessons/computer_passwords.html.erb
@@ -7,13 +7,18 @@
       <p>A <strong>password</strong> is a secret code that protects your computer and your online accounts from unauthorized access. It is important to use strong passwords to ensure your accounts and personal information remain safe.</p>
 
       <p>When creating a password, make sure it is at least <strong>eight characters long</strong>. Ideally, it should include a mix of <strong>uppercase and lowercase letters, numbers, and symbols</strong>. For example, instead of using "password123", a better password would be "Pa$$w0rd!23".</p>
-
+      <div class="image-container">
+      <%= image_tag 'computer_passwords.png', style: 'display: block; margin: auto; max-width: 75%; height: auto;' %>
+    </div>
+    
       <p>Avoid using common words or easily guessed information, such as your <strong>name, birthday, or "123456"</strong>. Hackers can easily guess these kinds of passwords. Instead, use something unique and unrelated to your personal information.</p>
 
       <p>It’s also important to use <strong>different passwords for different accounts</strong>. This way, if one password is compromised, your other accounts will remain secure.</p>
 
       <p>To help you remember your passwords, consider using a <strong>password manager</strong>. A password manager is a program that securely stores all of your passwords, so you only have to remember one master password to access all of them.</p>
-
+      <div class="image-container">
+        <%= image_tag 'computer_pmanager.png', style: 'display: block; margin: auto; max-width: 50%; height: auto;' %>
+      </div>
       <p>Finally, always make sure your passwords are <strong>updated regularly</strong>. Changing your passwords every few months helps keep your accounts more secure.</p>
 
       <p>Use the box below to test how strong your password is:</p>
