--- a/app/views/courses/computer_lessons/computer_apps.html.erb
+++ b/app/views/courses/computer_lessons/computer_apps.html.erb
@@ -5,14 +5,16 @@
       <p>Welcome to this lesson on computer applications! In this lesson, we will cover what computer applications are, how to use them effectively, and explore some of the most popular applications that help you in daily tasks.</p>
 
       <p>A <strong>Computer Application</strong>, or simply an app, is a software program designed to help you perform specific tasks. Applications can be for writing documents, editing photos, browsing the internet, or even playing games.</p>
-
+      <div class="image-container">
+      <%= image_tag 'computer_apps.png', style: 'display: block; margin: auto; max-width: 75%; height: auto;' %>
+    </div>
       <p><strong>Word Processors</strong>, such as Microsoft Word or Google Docs, are used to create and edit text documents. You can write essays, reports, or even letters using these apps. They come with features like spell-check and formatting tools to help you create professional-looking documents.</p>
-
+      <div class="image-container">
+      <%= image_tag 'computer_word.png', style: 'display: block; margin: auto; max-width: 75%; height: auto;' %>
+    </div>
       <p><strong>Spreadsheets</strong>, like Microsoft Excel or Google Sheets, are used for organizing data. You can create tables, perform calculations, and even visualize data using charts and graphs. They are great for managing finances, tracking projects, or analyzing data.</p>
 
       <p>If you need to <strong>communicate</strong> with others, you can use applications such as Zoom, Microsoft Teams, or Skype. These apps allow you to have video calls, send messages, and collaborate with people in real time, which is especially useful for remote work or staying in touch with friends and family.</p>
-
-      <p>For browsing the internet, you would use a <strong>Web Browser</strong> like Google Chrome, Firefox, or Safari. Browsers help you access websites, search for information, and interact with online content.</p>
 
       <p><strong>Media Players</strong>, such as VLC or Windows Media Player, let you watch videos or listen to music on your computer. You can use them to play different types of media files stored on your computer or streamed from the internet.</p>
 
@@ -100,13 +102,20 @@
 </style>
 
 <script>
-  function checkAnswer(button, isCorrect) {
-    if (isCorrect) {
-      button.classList.add('correct');
-      button.innerHTML += ' - Correct!';
-    } else {
-      button.classList.add('incorrect');
-      button.innerHTML += ' - Incorrect!';
-    }
+function checkAnswer(button, isCorrect) {
+  // Prevent additional clicks on this button
+  if (button.disabled) return;
+
+  // Mark the button as clicked and disable it
+  button.disabled = true;
+
+  // Add correct or incorrect feedback
+  if (isCorrect) {
+    button.classList.add('correct');
+    button.innerHTML += ' - Correct!';
+  } else {
+    button.classList.add('incorrect');
+    button.innerHTML += ' - Incorrect!';
   }
+}
 </script>
